--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -9,4 +9,4 @@ jobs:
   basic_workflow:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Job basic_workflow is executing as part of new workflow- Owner:$owner_name and with owner variable value as : $owner_variable "
+      - run: echo "Job basic_workflow is executing as part of new workflow- Owner:$owner_name and with owner variable value as :"
